--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
   <!-- Intro Text -->
     <div id="intro_text">
       <h1>hi,</h1>
-      <h5>I'm <strong>NHUT</strong></h5>
+      <h5 class="small-label">I'M <strong>NHUT</strong></h5>
       <p>
          I do <strong> UX&nbsp;/&nbsp;UI </strong>and currently working on my
          <br />
@@ -125,7 +125,7 @@
               <div class="arrow-circle"></div>
               <svg class="svg-circle" width="52px" height="52px" viewBox="0 0 52 52" >
                   <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                      <g id="Desktop-HD" transform="translate(-840.000000, -486.000000)" fill-rule="nonzero" stroke="#FFFFFF">
+                      <g id="Desktop-HD" transform="translate(-840.000000, -486.000000)" fill-rule="nonzero" stroke="#8C9BAF">
                           <circle id="Oval" cx="866" cy="512" r="25"></circle>
                       </g>
                   </g>
@@ -154,13 +154,15 @@
     <div class="content-column" id="latest-concept">
       <h5 class="small-label ease-in">SCHECKER</h5>
         <p class="ease-in">
-          A health app that does a little more than providing info <i>(and&nbsp;Cyberchondria)</i>.
+          A health app that does a little more than providing info
+          <br />
+          <i>(and&nbsp;Cyberchondria)</i>.
         </p>
       <!-- CTA -->
         <a class="CTA-button ease-in" id="schecker-CTA" href="./scheckerIntro.html">
           <svg class="button-outline" width="188px" height="52px" viewBox="0 0 188 52">
               <g id="Page-2" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                  <g id="cta-btn-stroke" transform="translate(-780.000000, -669.000000)" fill-rule="nonzero" stroke="#F3425E">
+                  <g class="cta-btn-stroke" transform="translate(-780.000000, -669.000000)" fill-rule="nonzero" stroke="#F3425E">
                       <rect id="Rectangle" x="780.5" y="669.5" width="187" height="51"></rect>
                   </g>
               </g>
@@ -177,28 +179,60 @@
 
 <section class="side-projects" id="other-concepts">
 
-    <h2 class="ease-in-o">ideas in incubation</h2>
+    <h3 class="ease-in-o">IDEAS IN INCUBATION</h3>
 
-    <div class="content-wrapper">
-
-      <div class="project-tile ease-in-o" id="plasticFootprint-tile">
-        <a class="video-overlay" id="plasticFootprint-overlay" href="#">
-          <img class="other-logo" alt="My Plastic Footprint Logo" src="./Assets/myPlasticFootprint_logo.png" />
-        </a>
+    <div class="content-wrapper wrapper-incubation">
+      <div class="incubation-tile ease-in-o" id="plasticFootprint-tile">
         <video autoplay loop muted id="mpf-video">
           <source src="./Assets/hd15756.mov" type="video/mp4" />
           Sorry it's a really nice video your browser failed to load.
         </video>
       </div>
-
-      <div class="project-tile ease-in-o" id="wishUp-tile">
-        <a class="video-overlay" id="wishUp-overlay" href="#">
-          <img class="other-logo" alt="WishUp Logo" src="./Assets/wishUp_logo.png" />
-        </a>
-        <img id="wishUp-mockup-ip" alt="WishUp Screen" src="./Assets/wishUp-mockup-ip.png" />
+      <span class="decorative-line ease-in-o"></span>
+      <div class="content-column">
+        <h5 class="small-label ease-in-o">MY PLASTIC FOOTPRINT</h5>
+          <p class="ease-in-o">
+            An app that tracks plastic usage.
+          </p>
+        <!-- CTA -->
+          <a class="CTA-button ease-in-o" id="mpf-CTA" href="#">
+            <svg class="button-outline" width="188px" height="52px" viewBox="0 0 188 52">
+                <g id="Page-2" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                    <g class="cta-btn-stroke" transform="translate(-780.000000, -669.000000)" fill-rule="nonzero" stroke="#F3425E">
+                        <rect id="Rectangle" x="780.5" y="669.5" width="187" height="51"></rect>
+                    </g>
+                </g>
+                <foreignObject width="188" height="52" y="14"><h6 class="CTA-label">CHECK IT OUT</h6></foreignObject>
+            </svg>
+          </a>
       </div>
 
+      </div>
+
+    <div class="content-wrapper wrapper-incubation">
+      <div class="incubation-tile ease-in-o" id="wishUp-tile">
+        <img id="wishUp-mockup-ip" alt="WishUp Screen" src="./Assets/wishUp-mockup-ip.png" />
+      </div>
+      <span class="decorative-line ease-in-o"></span>
+      <div class="content-column">
+        <h5 class="small-label ease-in-o">WISHUP</h5>
+          <p class="ease-in-o">
+            A different kind of social network.
+          </p>
+        <!-- CTA -->
+          <a class="CTA-button ease-in-o" id="wishUp-CTA" href="#">
+            <svg class="button-outline" width="188px" height="52px" viewBox="0 0 188 52">
+                <g id="Page-2" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                    <g class="cta-btn-stroke" transform="translate(-780.000000, -669.000000)" fill-rule="nonzero" stroke="#F3425E">
+                        <rect id="Rectangle" x="780.5" y="669.5" width="187" height="51"></rect>
+                    </g>
+                </g>
+                <foreignObject width="188" height="52" y="14"><h6 class="CTA-label">CHECK IT OUT</h6></foreignObject>
+            </svg>
+          </a>
+      </div>
     </div>
+
 
 </section>
 
@@ -211,7 +245,7 @@
 <!-- Work Showcase Section -->
 <section class="side-projects" id="works">
 
-  <h2 class="ease-in-w">past experience</h2>
+  <h3 class="ease-in-w">PAST EXPERIENCE</h3>
 
   <div class="content-wrapper">
 
