--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@
 
     <h3 class="ease-in-o">IDEAS IN INCUBATION</h3>
 
-    <div class="content-wrapper wrapper-incubation">
-      <div class="incubation-tile ease-in-o" id="plasticFootprint-tile">
+    <div class="content-wrapper wrapper-incubation ease-in-o">
+      <div class="incubation-tile" id="plasticFootprint-tile">
         <video autoplay loop muted id="mpf-video">
           <source src="./Assets/hd15756.mov" type="video/mp4" />
           Sorry it's a really nice video your browser failed to load.
@@ -209,8 +209,8 @@
 
       </div>
 
-    <div class="content-wrapper wrapper-incubation">
-      <div class="incubation-tile ease-in-o" id="wishUp-tile">
+    <div class="content-wrapper wrapper-incubation ease-in-o">
+      <div class="incubation-tile" id="wishUp-tile">
         <img id="wishUp-mockup-ip" alt="WishUp Screen" src="./Assets/wishUp-mockup-ip.png" />
       </div>
       <span class="decorative-line ease-in-o"></span>
@@ -247,16 +247,16 @@
 
   <h3 class="ease-in-w">PAST EXPERIENCE</h3>
 
-  <div class="content-wrapper">
+  <div class="content-wrapper ease-in-w">
 
-    <div class="project-tile ease-in-w" id="bardot-tile">
+    <div class="project-tile" id="bardot-tile">
       <a class="video-overlay" id="bardot-overlay" href="#">
         <img class="other-logo" alt="Bardot" src="./Assets/logo_bardot.png" />
       </a>
       <div class="tile-bg" id="bardot-tile-bg"></div>
     </div>
 
-    <div class="project-tile ease-in-w" id="sa-tile">
+    <div class="project-tile" id="sa-tile">
       <a class="video-overlay" id="sa-overlay" href="#">
         <img class="other-logo" alt="Standards Australia" src="./Assets/logo_sa.png" />
       </a>
