--- a/scheckerIntro.html
+++ b/scheckerIntro.html
@@ -20,6 +20,7 @@
   <script src="https://cdn.jsdelivr.net/npm/jquery@3/dist/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/plugins/TextPlugin.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/plugins/RoundPropsPlugin.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/utils/Draggable.min.js"></script>
 
   <link rel="apple-touch-icon" sizes="180x180" href="./Assets/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="./Assets/favicon-32x32.png">
@@ -42,63 +43,77 @@
   <h6 class="CTA-label">HOME</h6>
 </a>
 
-<a class="invision-CTA" href="https://invis.io/B8RU1TAPZYV">
-  <img class="invision-icon" alt="Invision Icon" src="./Assets/invision-CTA.png" />
-</a>
 
 
+<section class="project-intro">
 
+  <div class="project-hero-img" id="schecker-hero">
+    <img alt="Hero Image" src="./Assets/schecker-cover.png" />
+  </div>
 
-<div class="wrapper grey">
-    <div class="block intro">
-      <a href="https://invis.io/B8RU1TAPZYV">
-        <img class="logo" id="schecker-logo" alt="Schecker Logo" src="./Assets/schecker_logo_vertical.png" />
-      </a>
-      <h4>Check. Manage. Connect.</h4>
-    </div>
-
+  <div class="wrapper" id="schecker-intro">
     <div class="block">
-      <h5>CONCEPT</h5>
-      <p>
-        Schecker is my idea of a smart Health App that checks symptoms <strong>smartly</strong>, manages them,
-        and connects patients to their doctors & vice versa.
-      </p>
+      <h2>Concept</h2>
     </div>
+      <div class="block">
+        <p>
+          Schecker is my idea of a smart Health App that checks symptoms <strong>smartly</strong>, manages them,
+          and connects patients to their doctors & vice&nbsp;versa.
+        </p>
+      </div>
+  </div>
 
-    <div class="block">
-      <img class="mockup" alt="Schecker Screen Mockups" src="./Assets/screensMockups.png" />
-    </div>
-</div>
+</section>
 
-<div class="wrapper hiw-section">
 
-        <div class="block">
-          <h5>HOW IT WORKS</h5>
-          <h5 class="secondary-title">Check Symptom(s)</h5>
-          <p>
-            Schecker's algorithm works like a real doctor in which the system will ask
-            relevant questions considering <strong>all aspects</strong> of the possible causes to the user's condition(s),
-            and analyses the answers to provide a result as accurate as possible.
-          </p>
+
+<section>
+
+  <h3>HOW IT WORKS</h3>
+
+  <div class="wrapper">
+
+      <div class="block">
+        <h5>INPUT SYMPTOM(s)</h5>
+        <p>
+          Schecker's algorithm works like a real doctor in which the system will ask
+          relevant questions considering <strong>all aspects</strong> of the possible causes to the user's condition(s),
+          and analyses the answers to provide a result as accurate as possible.
+        </p>
+      </div>
+
+        <div class="block no-text-block">
+          <div class="hiw input">
+            <i class="fas fa-search"></i>
+            <span class="text-field">Your symptom</span>
+          </div>
         </div>
-
-          <div class="block">
-            <div class="hiw input">
-              <i class="fas fa-search"></i>
-              <span class="text-field">Your symptom</span>
-            </div>
-          </div>
+    </div>
 
 
-          <div class="block">
-            <div class="hiw result">
-              <h6>YOU MIGHT HAVE</h6>
-              <div class="progress-bar">
-                <div class="bar"></div>
-              </div>
-              <div class="result-text">Cyberchondria (<span id="counting">0</span>%)</div>
-            </div>
-          </div>
+    <div class="wrapper odd">
+
+      <div class="block no-text-block">
+        <div class="hiw-video">
+          <video autoplay loop muted>
+            <source src="./Assets/schecker-hiw-answer.mov" type="video/mp4" />
+            Sorry it's a really nice video your browser failed to load.
+          </video>
+        </div>
+      </div>
+
+      <div class="block">
+        <h5 class="secondary-title">ANSWER SOME QUESTIONS</h5>
+        <p>
+          Book an appointment with Schecker's partnered Doctors/Clinics/Hospitals,
+          with a report of the result sent beforehand.
+        </p>
+      </div>
+
+    </div>
+
+
+    <div class="wrapper">
 
         <div class="block">
           <h5 class="secondary-title">Get Result</h5>
@@ -109,128 +124,269 @@
           </p>
         </div>
 
-
-
-        <div class="block">
-          <h5 class="secondary-title">Book Appointment</h5>
-          <p>
-            Book an appointment with Schecker's partnered Doctors/Clinics/Hospitals,
-            with a report of the result sent beforehand.
-          </p>
-        </div>
-
-        <div class="block">
-          <div class="hiw book">
-            <img alt="Appointment booked Illustration" class="mpf-hiw-img" src="./Assets/schecker-book-illustration.png" />
+        <div class="block no-text-block">
+          <div class="hiw result">
+            <h6>YOU MIGHT HAVE</h6>
+            <div class="progress-bar">
+              <div class="bar"></div>
+            </div>
+            <div class="result-text">Diabetes (<span id="counting">0</span>%)</div>
           </div>
         </div>
 
-
-        <div class="block">
-          <div class="hiw watch">
-            <img alt="Symptoms Tracking Illustraion" class="mpf-hiw-img" src="./Assets/schecker-symptomcheck.png" />
-          </div>
-        </div>
-
-        <div class="block">
-          <h5 class="secondary-title">Watch Symptom(s)</h5>
-          <p>
-            Keep track of symptom(s). The system will remind user to update progress of his/her symptom(s), if a symptom occurs for
-            too long without improving, user will be urged to get checked by a healthcare professional asap.
-          </p>
-        </div>
-</div>
-
-
-
-
-<div class="wrapper grey">
-
-  <div class="only-text-blocks">
-    <div class="block">
-      <h5>VISION</h5>
-      <p>
-        Some more features I've thought of incorporating into the prototype
-      </p>
-      <h5 class="secondary-title">Results Matching</h5>
-      <p>
-        When user checks and books appointments via Schecker, a report of his/her questions & answers will
-        be sent to the doctor, the doctor will then have a look and make a judgement of his/her own, as well as notify/update
-        to the patient of any changes or additional advices prior to the appointments. Then, when an official diagnosis is made, it will be
-        automatically updated in the app together with the prescribed medication and treatments.
-        <br />
-        <br />
-        <i>Data will be used to improve Schecker's AI.</i>
-      </p>
     </div>
 
 
+    <div class="wrapper odd">
 
-     <div class="block">
-       <h5 class="secondary-title">Progress Management</h5>
-       <p>
-         Tracks progress of symptoms (diagnosed & undiagnosed) and treatments.
-       </p>
-     </div>
-
-     <div class="block">
-       <h5 class="secondary-title">Medication management</h5>
-       <p>
-         This links with the Progress Management feature, it gives info of drugs and their interactions with each other and the body,
-         as well as reminding and making sure medication is taken on time.
-       </p>
-     </div>
-
-     <div class="block">
-       <h5 class="secondary-title">Pets Version</h5>
-       <p>
-         Schecker's version for pets.
-       </p>
-     </div>
-  </div>
-</div>
-
-<div class="wrapper">
-  <div class="block">
-    <p>
-      <i>Please check out my interactive prototype with the basic flow. For this is only my concept idea, I have
-      yet to make a complete prototype with all of the aforementioned features.</i>
-    </p>
-  </div>
-
-  <div class="block">
-    <a class="cta-w-label" id="schecker-viewInvision" href="https://invis.io/B8RU1TAPZYV">
-      <h6 class="CTA-label">VIEW PROTOTYPE</h6>
-      <div class="CTAarrow arrow-next" id="scheckerCTA-next">
-        <div class="arrow-circles">
-            <svg class="svg-circle" width="52px" height="52px" viewBox="0 0 52 52" >
-                <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                    <g id="Desktop-HD" transform="translate(-840.000000, -486.000000)" fill-rule="nonzero" stroke="#F3425E">
-                        <circle id="Oval" cx="866" cy="512" r="25"></circle>
-                    </g>
-                </g>
-            </svg>
-            <div class="arrow-circle"></div>
+      <div class="block no-text-block">
+        <div class="hiw-video">
+          <video autoplay loop muted>
+            <source src="./Assets/schecker-hiw-book.mov" type="video/mp4" />
+            Sorry it's a really nice video your browser failed to load.
+          </video>
         </div>
-        <div class="arrow"></div>
       </div>
-    </a>
 
-    <a class="simple-CTAbtn" id="schecker-viewInvisionCTA" href="https://invis.io/B8RU1TAPZYV">
-      <h6 class="CTA-label">VIEW PROTOTYPE</h6>
-    </a>
+      <div class="block">
+        <h5 class="secondary-title">BOOK APPOINTMENT</h5>
+        <p>
+          Book an appointment with Schecker's partnered Doctors/Clinics/Hospitals,
+          with a report of the result sent beforehand.
+        </p>
+      </div>
+
+    </div>
+
+
+    <div class="wrapper">
+
+      <div class="block">
+        <h5 class="secondary-title">WATCH SYMPTOMS</h5>
+        <p>
+          Book an appointment with Schecker's partnered Doctors/Clinics/Hospitals,
+          with a report of the result sent beforehand.
+        </p>
+      </div>
+
+      <div class="block no-text-block">
+        <div class="hiw-video">
+          <video autoplay loop muted>
+            <source src="./Assets/schecker-hiw-track.mov" type="video/mp4" />
+            Sorry it's a really nice video your browser failed to load.
+          </video>
+        </div>
+      </div>
+
+    </div>
+
+</section>
+
+
+<section id="schecker-draggable-flow">
+  <h3>SIMPLIFIED FLOW</h3>
+  <img alt="user flow" id="schecker-userFlow" src="./Assets/schecker-simplifiedFlow.png" />
+</section>
+
+
+<section>
+
+  <h3>UX BREAKDOWN</h3>
+
+  <div class="wrapper">
+
+    <div class="block">
+      <h5>PROFILE</h5>
+      <p>
+        Easy switching between Medical & Personal info. Completion of Profile is not compulsory;
+        however, users are encouraged to complete it as the datas might enhance the assessment's accuracy.
+        Also, relevant info will be prefilled if users choose to fill in the Patient Form online when booking a doctor
+        appointment.
+      </p>
+    </div>
+    <div class="block no-text-block">
+      <video autoplay loop muted>
+        <source src="./Assets/scheckerUX-profile.mov" type="video/mp4" />
+        Sorry it's a really nice video your browser failed to load.
+      </video>
+    </div>
 
   </div>
 
-</div>
+  <div class="wrapper odd">
+
+    <div class="block no-text-block">
+      <video autoplay loop muted>
+        <source src="./Assets/scheckerUX-symptoms.mov" type="video/mp4" />
+        Sorry it's a really nice video your browser failed to load.
+      </video>
+    </div>
+
+    <div class="block">
+      <h5>HOME - INPUT SYMPTOMS</h5>
+      <p>
+        <strong>Options to check for someone else</strong> <br />
+        Default: self checking. If check for someone else, user will be prompted to fill in some basic info of the person
+        being checked for.
+        <br />
+        <br />
+        <strong>2 ways of inputing symptoms</strong> <br />
+        Traditional input via text field (with search suggestions) for intuitiveness &
+        Visualised Human body for optimised user experience when picking on the troubled body part(s).
+      </p>
+    </div>
+
+  </div>
+
+  <div class="wrapper">
+
+    <div class="block">
+      <h5>RESULT</h5>
+      <p>
+        Result shows possibilities of the conditions, medical advice, disease info & options to book Doctor appointment /
+        add symptom(s) to watch list for tracking.
+      </p>
+    </div>
+    <div class="block no-text-block">
+      <video autoplay loop muted>
+        <source src="./Assets/scheckerUX-result.mov" type="video/mp4" />
+        Sorry it's a really nice video your browser failed to load.
+      </video>
+    </div>
+
+  </div>
+
+  <div class="wrapper odd">
+
+    <div class="block no-text-block">
+      <video autoplay loop muted>
+        <source src="./Assets/scheckerUX-book.mov" type="video/mp4" />
+        Sorry it's a really nice video your browser failed to load.
+      </video>
+    </div>
+
+    <div class="block">
+      <h5>BOOK APPOINTMENT</h5>
+      <p>
+        <strong>Doctors listing with availability</strong> <br />
+        Doctors listing with key info and pickable date/time enable users to quickly schedule an appointment without going
+        through too many steps. <br /><br />
+        <strong>Refined booking process</strong><br />
+        Booking can be done right away for users who have completed all the relevant fields in their profile. Those haven't
+        will be asked to quickly provide necessary info (e.g. Insurance) and choose whether they want to complete the
+        patient form online, or at the doctor's office. <br /><br />
+        <strong>Filter</strong> <br />
+        If user book from the assessment result, the system will automatically filtered the Doctor listing base on
+        Expertise - Distance - Rating - Availability accordingly. Filtered will be displayed as words with 2 key criterias
+        (e.g. 'Nearest Primary Care Doctors', 'Best Dermatologists', 'Flexible schedule Eye Doctors', etc.) as it is friendlier for users to pickup how
+        the Doctor listing works.
+      </p>
+    </div>
+
+  </div>
+
+  <div class="wrapper">
+
+    <div class="block">
+      <h5>APPOINTMENTS LISTING</h5>
+      <p>
+        <strong>Expandable blocks</strong> <br />
+        Each appointment is displayed in a separate collapsed block with key info visible. Confirmed upcoming
+        appointments will be on top. <br /><br />
+        <strong>Status & Doctor's note</strong> <br />
+        An appointment is officially confirmed after the doctor has reviewed and confirmed it. If the doctor
+        has any note for the patient, it will be showed half visible in the collapsed block (doctor's note is
+        also considered as key info - half visible display for real estate saving). <br /><br />
+        <strong>Reschedule & cancel</strong> <br />
+        Appointments canceling is possible, however not encouraged. Thus, the option to cancel will be visible
+        inside the 'Reschedule' option.
+      </p>
+    </div>
+    <div class="block no-text-block">
+      <video autoplay loop muted>
+        <source src="./Assets/scheckerUX-appointments.mov" type="video/mp4" />
+        Sorry it's a really nice video your browser failed to load.
+      </video>
+    </div>
+
+  </div>
+
+  <div class="wrapper odd">
+
+    <div class="block no-text-block">
+      <video autoplay loop muted>
+        <source src="./Assets/scheckerUX-track.mov" type="video/mp4" />
+        Sorry it's a really nice video your browser failed to load.
+      </video>
+    </div>
+
+    <div class="block">
+      <h5>SYMPTOMS TRACKING</h5>
+      <p>
+        <strong>Categorised symptoms</strong> <br />
+        Symptoms are grouped within their causes: diseases that have been diagnosed by doctors, diseases from
+        assessment results, unknown (symptoms that have not been diagnosed or checked).
+        <br /><br />
+        <strong>Medications info</strong> <br />
+        Users can add medications to each group of symptoms for better management. <br /><br />
+        <strong>Colour-visualised progression</strong><br />
+        Each symptom has its own status of progression. Status of progression is visualised with colours
+        indicating 3 states: Red for getting worse, Neutral for progressing, Green for getting better.
+        Overall progression of all symptoms within one group will be reflected by the group's outline colour.<br /><br />
+        <strong>Symptom tracking & detail</strong><br />
+        Symptom detail screen allows users to add progress, see medication info (if any) and tracking history.
+        Users are able to track the symptom progress daily. Progression is visualised with a graphic chart.
+      </p>
+    </div>
+
+  </div>
+
+  <div class="wrapper">
+    <div class="block">
+      <p>
+        <i>Please check out my interactive prototype on InVision. I've got key screens and the basic flow there.</i>
+      </p>
+    </div>
+
+    <div class="block">
+      <a class="cta-w-label" id="schecker-viewInvision" href="https://invis.io/B8RU1TAPZYV">
+        <h6 class="CTA-label">VIEW PROTOTYPE</h6>
+        <div class="CTAarrow arrow-next" id="scheckerCTA-next">
+          <div class="arrow-circles">
+              <svg class="svg-circle" width="52px" height="52px" viewBox="0 0 52 52" >
+                  <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                      <g id="Desktop-HD" transform="translate(-840.000000, -486.000000)" fill-rule="nonzero" stroke="#F3425E">
+                          <circle id="Oval" cx="866" cy="512" r="25"></circle>
+                      </g>
+                  </g>
+              </svg>
+              <div class="arrow-circle"></div>
+          </div>
+          <div class="arrow"></div>
+        </div>
+      </a>
+      <a class="simple-CTAbtn" id="schecker-viewInvisionCTA" href="https://invis.io/B8RU1TAPZYV">
+        <h6 class="CTA-label">VIEW PROTOTYPE</h6>
+      </a>
+    </div>
+  </div>
+
+</section>
+
+
+
+
+
 
 <footer>
+  <small class="copyright">	&#169; 2019 NHUT H. DON</small>
   <div class="footer-links">
-    <a href="./index.html"><small class="footer-text">Home</small></a>
-    <a href="./myPlasticFootprint.html"><small class="footer-text">My Plastic Footprint</small></a>
-    <a href="./WishUp.html"><small class="footer-text">WishUp</small></a>
+    <a href="#">Home</a>
+    <a href="#">MyPlasticFootprint</a>
+    <a href="#">WishUp</a>
+    <a href="#">Bardot</a>
+    <a href="#">Standards&nbsp;Australia</a>
   </div>
-  <small class="footer-text" id="copyright">	&#169; 2019 NHUT H. DON</small>
 </footer>
 
 
