--- a/scheckerIntro.html
+++ b/scheckerIntro.html
@@ -76,9 +76,7 @@
       <div class="block">
         <h5>INPUT SYMPTOM(s)</h5>
         <p>
-          Schecker's algorithm works like a real doctor in which the system will ask
-          relevant questions considering <strong>all aspects</strong> of the possible causes to the user's condition(s),
-          and analyses the answers to provide a result as accurate as possible.
+          Tell the app your symptom(s).
         </p>
       </div>
 
@@ -105,8 +103,7 @@
       <div class="block">
         <h5 class="secondary-title">ANSWER SOME QUESTIONS</h5>
         <p>
-          Book an appointment with Schecker's partnered Doctors/Clinics/Hospitals,
-          with a report of the result sent beforehand.
+          The app acts like a real doctor asking relevant questions to provide assessment.
         </p>
       </div>
 
@@ -116,11 +113,10 @@
     <div class="wrapper">
 
         <div class="block">
-          <h5 class="secondary-title">Get Result</h5>
+          <h5 class="secondary-title">GET RESULT</h5>
           <p>
-            Result includes information about the user's symptom(s), prediction of the condition(s)/disease(s),
-            further assessments/medical tests needed, etc. All in a manner that everyone who doesn't speak
-            'medical terminology' can understand.
+            AI is used to filter out questions base on the answers and analyse them to predict
+            diseases/conditions with high accuracy.
           </p>
         </div>
 
@@ -151,8 +147,7 @@
       <div class="block">
         <h5 class="secondary-title">BOOK APPOINTMENT</h5>
         <p>
-          Book an appointment with Schecker's partnered Doctors/Clinics/Hospitals,
-          with a report of the result sent beforehand.
+          Painlessly book appointments with recommended doctors through a streamlined booking process.
         </p>
       </div>
 
@@ -162,10 +157,10 @@
     <div class="wrapper">
 
       <div class="block">
-        <h5 class="secondary-title">WATCH SYMPTOMS</h5>
+        <h5 class="secondary-title">TRACK SYMPTOMS</h5>
         <p>
-          Book an appointment with Schecker's partnered Doctors/Clinics/Hospitals,
-          with a report of the result sent beforehand.
+          Whether ending up with a visit to the doctor's office or not, add the symptoms to watch list and update
+          their progression daily.
         </p>
       </div>
 
