--- a/scheckerIntro.html
+++ b/scheckerIntro.html
@@ -194,8 +194,8 @@
       <h5>PROFILE</h5>
       <p>
         Easy switching between Medical & Personal info. Completion of Profile is not compulsory;
-        however, users are encouraged to complete it as the datas might enhance the assessment's accuracy.
-        Also, relevant info will be prefilled if users choose to fill in the Patient Form online when booking a doctor
+        however encouraged as the datas might enhance the assessment's accuracy.
+        Relevant info will be prefilled if users choose to fill in the Patient Form online when booking a doctor
         appointment.
       </p>
     </div>
@@ -272,9 +272,9 @@
         patient form online, or at the doctor's office. <br /><br />
         <strong>Filter</strong> <br />
         If user book from the assessment result, the system will automatically filtered the Doctor listing base on
-        Expertise - Distance - Rating - Availability accordingly. Filtered will be displayed as words with 2 key criterias
-        (e.g. 'Nearest Primary Care Doctors', 'Best Dermatologists', 'Flexible schedule Eye Doctors', etc.) as it is friendlier for users to pickup how
-        the Doctor listing works.
+        Expertise - Distance - Rating - Availability accordingly. Filter criterias will be displayed as words
+        with 2 key criterias (e.g. 'Nearest Primary Care Doctors', 'Best Dermatologists',
+        'Flexible schedule Eye Doctors', etc.) as it is friendlier for users to pickup how the Doctor listing works.
       </p>
     </div>
 
@@ -286,7 +286,7 @@
       <h5>APPOINTMENTS LISTING</h5>
       <p>
         <strong>Expandable blocks</strong> <br />
-        Each appointment is displayed in a separate collapsed block with key info visible. Confirmed upcoming
+        Each appointment is displayed in a separate default collapsed block with key info visible. Confirmed upcoming
         appointments will be on top. <br /><br />
         <strong>Status & Doctor's note</strong> <br />
         An appointment is officially confirmed after the doctor has reviewed and confirmed it. If the doctor
