--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   <div class="menu-items" id="menu-links">
     <ul>
       <li><a href="#home-intro" rel="m_PageScroll2id" onclick="closeMenu()">Home</a></li>
-      <li><a href="#projects" rel="m_PageScroll2id" onclick="closeMenu()">Schecker</a></li>
+      <li><a href="#projects" rel="m_PageScroll2id" onclick="closeMenu()">Featured Project</a></li>
       <li><a href="#other-concepts" rel="m_PageScroll2id" onclick="closeMenu()">In incubation</a></li>
       <li><a href="#works" rel="m_PageScroll2id" onclick="closeMenu()">Past experience</a></li>
       <li><a href="#about" rel="m_PageScroll2id" onclick="closeMenu()">Me</a></li>
@@ -194,7 +194,7 @@
             An app that tracks plastic usage.
           </p>
         <!-- CTA -->
-          <a class="CTA-button ease-in-o" id="mpf-CTA" href="#">
+          <a class="CTA-button ease-in-o" id="mpf-CTA" href="./myPlasticFootprint.html">
             <svg class="button-outline" width="188px" height="52px" viewBox="0 0 188 52">
                 <g id="Page-2" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                     <g class="cta-btn-stroke" transform="translate(-780.000000, -669.000000)" fill-rule="nonzero" stroke="#F3425E">
