--- a/myPlasticFootprint.html
+++ b/myPlasticFootprint.html
@@ -89,7 +89,7 @@
 
 <section class="not-fullscreen">
 
-  <h3>USERS & USE CASES</h3>
+  <h3>USER PERSONAS</h3>
 
   <div class="wrapper rachel">
 
@@ -121,7 +121,7 @@
       </div>
 
       <div class="block no-text-block">
-          <img alt="use case" class="screenshots" src="./Assets/mpf-rachel-insta.png" />
+          <img alt="use case" class="appScreen" src="./Assets/mpf-rachel-insta.png" />
       </div>
 
     </div>
@@ -193,7 +193,7 @@
           </div>
 
           <div class="block no-text-block">
-              <img alt="use case" class="screenshots" src="./Assets/mpf-grannygoesgreen.png" />
+              <img alt="use case" class="appScreen" src="./Assets/mpf-grannygoesgreen.png" />
           </div>
 
         </div>
@@ -201,7 +201,9 @@
 </section>
 
 
-
+<section>
+  <h1>More's coming</h1>
+</section>
 
 
 
