--- a/scheckerIntro.html
+++ b/scheckerIntro.html
@@ -205,11 +205,11 @@
 </section>
 
 
-<section class="fullscreen-screenshots not-fullscreen">
+<section class="not-fullscreen">
   <h3>INITIAL WIREFRAME</h3>
-  <img alt="wireframe" class="light-bg-f9f9f9" src="./Assets/schecker-wireframe.png" />
+  <img alt="wireframe" class="light-bg-f9f9f9 fullscreen-img" src="./Assets/schecker-wireframe.png" />
   <h3>UI COMPONENTS</h3>
-  <img alt="UI Components" class="light-bg-f9f9f9" src="./Assets/schecker-uiComponents.png" />
+  <img alt="UI Components" class="light-bg-f9f9f9 fullscreen-img" src="./Assets/schecker-uiComponents.png" />
 </section>
 
 
