--- a/myPlasticFootprint.html
+++ b/myPlasticFootprint.html
@@ -87,11 +87,11 @@
 
 
 
-<section class="not-fullscreen">
+<section>
 
   <h3>USER PERSONAS</h3>
 
-  <div class="wrapper rachel">
+  <div class="wrapper not-fullscreen rachel">
 
     <div class="block no-text-block">
       <img alt="User 1" class="user-example" src="./Assets/mpf-rachel.svg" />
@@ -128,7 +128,7 @@
 
 
 
-    <div class="wrapper dad">
+    <div class="wrapper not-fullscreen dad">
 
       <div class="block no-text-block">
         <img alt="User 2" class="user-example" id="rachels-dad" src="./Assets/mpf-rachelsDad.svg" />
@@ -166,7 +166,7 @@
       </div>
 
 
-      <div class="wrapper granny">
+      <div class="wrapper not-fullscreen granny">
 
         <div class="block no-text-block">
           <img alt="User 2" id="rachels-granny" src="./Assets/mpf-rachelsGranny.png" />
