--- a/scheckerIntro.html
+++ b/scheckerIntro.html
@@ -198,19 +198,21 @@
 
 </section>
 
+<section>
+  <h3>EARLY CONCEPT</h3>
+  <div id="schecker-draggable-flow">
+    <h5 class="secondary-title">SIMPLIFIED FLOW</h5>
+    <img alt="user flow" id="schecker-userFlow" src="./Assets/schecker-simplifiedFlow.png" />
+  </div>
 
-<section id="schecker-draggable-flow">
-  <h3>SIMPLIFIED FLOW</h3>
-  <img alt="user flow" id="schecker-userFlow" src="./Assets/schecker-simplifiedFlow.png" />
+
+    <h5 class="secondary-title">INITIAL WIREFRAME</h5>
+    <img alt="wireframe" class="light-bg-f9f9f9 not-fullscreen-img" src="./Assets/schecker-wireframe.png" />
+    <h5 class="secondary-title">UI COMPONENTS</h5>
+    <img alt="UI Components" class="light-bg-f9f9f9 not-fullscreen-img" src="./Assets/schecker-uiComponents.png" />
+
 </section>
 
-
-<section class="not-fullscreen">
-  <h3>INITIAL WIREFRAME</h3>
-  <img alt="wireframe" class="light-bg-f9f9f9 fullscreen-img" src="./Assets/schecker-wireframe.png" />
-  <h3>UI COMPONENTS</h3>
-  <img alt="UI Components" class="light-bg-f9f9f9 fullscreen-img" src="./Assets/schecker-uiComponents.png" />
-</section>
 
 
 
