--- a/myPlasticFootprint.html
+++ b/myPlasticFootprint.html
@@ -215,8 +215,8 @@
 <footer>
   <small class="copyright">	&#169; 2019 NHUT H. DON</small>
   <div class="footer-links">
-    <a href="#">Home</a>
-    <a href="#">MyPlasticFootprint</a>
+    <a href="./index.html">Home</a>
+    <a href="./scheckerIntro.html">Schecker</a>
     <a href="#">WishUp</a>
     <a href="#">Bardot</a>
     <a href="#">Standards&nbsp;Australia</a>
