--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
     <div class="content-wrapper wrapper-incubation ease-in-o">
       <div class="incubation-tile" id="plasticFootprint-tile">
-        <video autoplay loop muted id="mpf-video">
+        <video playsinline autoplay loop muted id="mpf-video">
           <source src="./Assets/hd15756.mov" type="video/mp4" />
           Sorry it's a really nice video your browser failed to load.
         </video>
