--- a/myPlasticFootprint.html
+++ b/myPlasticFootprint.html
@@ -66,7 +66,7 @@
 
 
 
-<section class="project-intro" id="mpf-intro">
+<section class="project-intro intro-fullscreen-bg" id="mpf-intro">
 
   <div class="wrapper">
     <div class="block">
@@ -74,7 +74,7 @@
       <p>
         MyPlasticFootprint is my idea of an app that tracks our daily usage and recycling of plastic products.
         The concept is very simple, for every piece of plastic purchased OR thrown away, users mark one negative footprint;
-        for every piece recycled, a positive footprint will be marked. At the end of the day, users will be
+        for every piece recycled, a positive footprint will be marked. That way, users will be
         able to see their impacts, thus are encouraged to make more positive ones.
       </p>
     </div>
@@ -202,11 +202,8 @@
 
 
 <section>
-  <h1>More's coming</h1>
+  <h1>in progress</h1>
 </section>
-
-
-
 
 
 
