--- a/scheckerIntro.html
+++ b/scheckerIntro.html
@@ -114,7 +114,7 @@
 
       <div class="block no-text-block">
         <div class="hiw-video">
-          <video autoplay loop muted>
+          <video playsinline autoplay loop muted>
             <source src="./Assets/schecker-hiw-answer.mov" type="video/mp4" />
             Sorry it's a really nice video your browser failed to load.
           </video>
@@ -158,7 +158,7 @@
 
       <div class="block no-text-block">
         <div class="hiw-video">
-          <video autoplay loop muted>
+          <video playsinline autoplay loop muted>
             <source src="./Assets/schecker-hiw-book.mov" type="video/mp4" />
             Sorry it's a really nice video your browser failed to load.
           </video>
@@ -187,7 +187,7 @@
 
       <div class="block no-text-block">
         <div class="hiw-video">
-          <video autoplay loop muted>
+          <video playsinline autoplay loop muted>
             <source src="./Assets/schecker-hiw-track.mov" type="video/mp4" />
             Sorry it's a really nice video your browser failed to load.
           </video>
@@ -234,7 +234,7 @@
       </p>
     </div>
     <div class="block no-text-block">
-      <video autoplay loop muted>
+      <video playsinline autoplay loop muted>
         <source src="./Assets/scheckerUX-profile.mov" type="video/mp4" />
         Sorry it's a really nice video your browser failed to load.
       </video>
@@ -245,7 +245,7 @@
   <div class="wrapper odd">
 
     <div class="block no-text-block">
-      <video autoplay loop muted>
+      <video playsinline autoplay loop muted>
         <source src="./Assets/scheckerUX-symptoms.mov" type="video/mp4" />
         Sorry it's a really nice video your browser failed to load.
       </video>
@@ -277,7 +277,7 @@
       </p>
     </div>
     <div class="block no-text-block">
-      <video autoplay loop muted>
+      <video playsinline autoplay loop muted>
         <source src="./Assets/scheckerUX-result.mov" type="video/mp4" />
         Sorry it's a really nice video your browser failed to load.
       </video>
@@ -288,7 +288,7 @@
   <div class="wrapper odd">
 
     <div class="block no-text-block">
-      <video autoplay loop muted>
+      <video playsinline autoplay loop muted>
         <source src="./Assets/scheckerUX-book.mov" type="video/mp4" />
         Sorry it's a really nice video your browser failed to load.
       </video>
@@ -332,7 +332,7 @@
       </p>
     </div>
     <div class="block no-text-block">
-      <video autoplay loop muted>
+      <video playsinline autoplay loop muted>
         <source src="./Assets/scheckerUX-appointments.mov" type="video/mp4" />
         Sorry it's a really nice video your browser failed to load.
       </video>
@@ -343,7 +343,7 @@
   <div class="wrapper odd">
 
     <div class="block no-text-block">
-      <video autoplay loop muted>
+      <video playsinline autoplay loop muted>
         <source src="./Assets/scheckerUX-track.mov" type="video/mp4" />
         Sorry it's a really nice video your browser failed to load.
       </video>
@@ -373,7 +373,7 @@
   <div class="wrapper">
     <div class="block">
       <p>
-        <i>Please check out my interactive prototype on InVision. I've got key screens and the basic flow there.</i>
+        <i>For a more interactive experience, please check out my InVision Prototype.</i>
       </p>
     </div>
 
