--- a/WishUp.html
+++ b/WishUp.html
@@ -16,12 +16,6 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
         integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 
-  <script src="https://cdn.jsdelivr.net/npm/gsap@2/umd/TweenMax.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3/dist/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/plugins/TextPlugin.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/plugins/RoundPropsPlugin.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/utils/Draggable.min.js"></script>
-
   <link rel="apple-touch-icon" sizes="180x180" href="./Assets/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="./Assets/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="./Assets/favicon-16x16.png">
@@ -38,7 +32,7 @@
 <body>
 
   <!-- Hamburger Menu Icon -->
-  <div class="menu" id="hamburger">
+  <div class="menu">
     <div class="bar1"></div>
     <div class="bar2"></div>
     <div class="bar3"></div>
@@ -46,8 +40,8 @@
 
 
 <!-- Overlay Menu Navigation -->
-<div class ="overlay" id="menu-overlay">
-  <div class="menu-items" id="menu-links">
+<div class ="overlay">
+  <div class="menu-items">
     <ul>
       <li><a href="index.html" onclick="closeMenu()">Home</a></li>
       <li><a href="scheckerIntro.html" onclick="closeMenu()">Schecker</a></li>
@@ -133,7 +127,13 @@
 
 
 
-
+  <script src="https://cdn.jsdelivr.net/npm/gsap@2/umd/TweenMax.min.js"></script>
+  <script src="./Scripts/TweenMax.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3/dist/jquery.min.js"></script>
+  <script src="./Scripts/jquery.gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/plugins/TextPlugin.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/plugins/RoundPropsPlugin.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/utils/Draggable.min.js"></script>
   <script type="text/javascript" src="./Scripts/myScript.js"></script>
   <script type="text/javascript" src="./Scripts/projectScript.js"></script>
 
