--- a/index.html
+++ b/index.html
@@ -24,10 +24,6 @@
   <link rel="stylesheet" type="text/css" href="myStyle.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 
-
-
-  <script src="https://cdn.jsdelivr.net/combine/npm/gsap@2,npm/jquery@3,npm/animejs@3,npm/page-scroll-to-id@1"></script>
-
 </head>
 
 
@@ -70,7 +66,7 @@
 
 <!-- <div class="sidenav" id="navBar"> -->
     <!-- Hamburger Menu Icon -->
-    <div class="menu" id="hamburger">
+    <div class="menu">
       <div class="bar1"></div>
       <div class="bar2"></div>
       <div class="bar3"></div>
@@ -80,14 +76,14 @@
 
 
 <!-- Overlay Menu Navigation -->
-<div class ="overlay" id="menu-overlay">
+<div class ="overlay">
   <div class="menu-items" id="menu-links">
     <ul>
-      <li><a href="#home-intro" rel="m_PageScroll2id" onclick="closeMenu()">Home</a></li>
-      <li><a href="#projects" rel="m_PageScroll2id" onclick="closeMenu()">Featured Project</a></li>
-      <li><a href="#other-concepts" rel="m_PageScroll2id" onclick="closeMenu()">In incubation</a></li>
-      <li><a href="#works" rel="m_PageScroll2id" onclick="closeMenu()">Past experience</a></li>
-      <li><a href="#about" rel="m_PageScroll2id" onclick="closeMenu()">Me</a></li>
+      <li><a href="#home-intro" rel="m_PageScroll2id">Home</a></li>
+      <li><a href="#projects" rel="m_PageScroll2id">Featured Project</a></li>
+      <li><a href="#other-concepts" rel="m_PageScroll2id">In incubation</a></li>
+      <li><a href="#works" rel="m_PageScroll2id">Past experience</a></li>
+      <li><a href="#about" rel="m_PageScroll2id">Me</a></li>
     </ul>
   </div>
   <i>nhuthoangdon@gmail.com</i>
@@ -4193,7 +4189,10 @@
 
 
 <!-- ______________________________________________________________________________ -->
-
+<script src="https://cdn.jsdelivr.net/combine/npm/gsap@2,npm/jquery@3,npm/animejs@3,npm/page-scroll-to-id@1"></script>
+<script src="./Scripts/TweenMax.min.js"></script>
+<script src="./Scripts/jquery.gsap.min.js"></script>
+<script src="./Scripts/anime.min.js"></script>
 <script type="text/javascript" src="./Scripts/myScript.js"></script>
 
 
