fixed jQuery no conflict & home incubation egg changed

--- a/scheckerIntro.html
+++ b/scheckerIntro.html
@@ -138,7 +138,7 @@
         <div class="block no-text-block">
           <div class="hiw result">
             <h6>YOU MIGHT HAVE</h6>
-            <div class="progress-bar">
+            <div id="schecker-progress-bar">
               <div class="bar"></div>
             </div>
             <div class="result-text">Diabetes (<span id="counting">0</span>%)</div>
@@ -193,7 +193,7 @@
 </section>
 
 <section>
-  <h3>EARLY CONCEPT</h3>
+  <h3>UX/UI</h3>
   <div id="schecker-draggable-flow">
     <h5 class="secondary-title">SIMPLIFIED FLOW</h5>
     <img alt="user flow" id="schecker-userFlow" src="./Assets/schecker-simplifiedFlow.png" />
