fixed menu errors

--- a/scheckerIntro.html
+++ b/scheckerIntro.html
@@ -193,18 +193,17 @@
 </section>
 
 <section>
-  <h3>UX/UI</h3>
-  <div id="schecker-draggable-flow">
+  <h3 class="block-in">UX/UI BRIEF</h3>
+  <div id="schecker-draggable-flow" class="block-in">
     <h5 class="secondary-title">SIMPLIFIED FLOW</h5>
     <img alt="user flow" id="schecker-userFlow" src="./Assets/schecker-simplifiedFlow.png" />
   </div>
 
 
-    <h5 class="secondary-title">INITIAL WIREFRAME</h5>
-    <img alt="wireframe" class="light-bg-f9f9f9 not-fullscreen-img" src="./Assets/schecker-wireframe.png" />
-    <h5 class="secondary-title">UI COMPONENTS</h5>
-    <img alt="UI Components" class="light-bg-f9f9f9 not-fullscreen-img" src="./Assets/schecker-uiComponents.png" />
-
+    <h5 class="secondary-title block-in">INITIAL WIREFRAME</h5>
+    <img alt="wireframe" class="light-bg-f9f9f9 not-fullscreen-img block-in" src="./Assets/schecker-wireframe.png" />
+    <h5 class="secondary-title block-in">UI COMPONENTS</h5>
+    <img alt="UI Components" class="light-bg-f9f9f9 not-fullscreen-img block-in" src="./Assets/schecker-uiComponents.png" />
 </section>
 
 
