--- a/scheckerIntro.html
+++ b/scheckerIntro.html
@@ -68,12 +68,13 @@
 
   <div class="wrapper" id="schecker-intro">
     <div class="block">
-      <h2>Concept</h2>
+      <h2>The idea</h2>
     </div>
       <div class="block">
         <p>
-          Schecker is my idea of a smart Health App that checks symptoms <strong>smartly</strong>, manages them,
-          and connects patients to their doctors & vice&nbsp;versa.
+          A smart Health App that makes it easier when you have a symptom.
+          An all-in-one process of checking symptoms, smartly - booking doctor appointments - managing symptoms &
+          medication.
         </p>
       </div>
   </div>
@@ -193,9 +194,9 @@
 </section>
 
 <section>
-  <h3 class="block-in">UX/UI BRIEF</h3>
+  <h3 class="block-in">EARLY CONCEPT</h3>
   <div id="schecker-draggable-flow" class="block-in">
-    <h5 class="secondary-title">SIMPLIFIED FLOW</h5>
+    <h5 class="secondary-title">USER FLOW</h5>
     <img alt="user flow" id="schecker-userFlow" src="./Assets/schecker-simplifiedFlow.png" />
   </div>
 
@@ -408,6 +409,7 @@
     <a href="#">WishUp</a>
     <a href="#">Bardot</a>
     <a href="#">Standards&nbsp;Australia</a>
+    <a href="#">Credits</a>
   </div>
 </footer>
 
