--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
             A different kind of social network.
           </p>
         <!-- CTA -->
-          <a class="CTA-button ease-in-o" id="wishUp-CTA" href="#">
+          <a class="CTA-button ease-in-o" id="wishUp-CTA" href="./WishUp.html">
             <svg class="button-outline" width="188px" height="52px" viewBox="0 0 188 52">
                 <g id="Page-2" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                     <g class="cta-btn-stroke" transform="translate(-780.000000, -669.000000)" fill-rule="nonzero" stroke="#F3425E">
