--- a/myPlasticFootprint.html
+++ b/myPlasticFootprint.html
@@ -223,10 +223,10 @@
   <div class="footer-links">
     <a href="./index.html">Home</a>
     <a href="./scheckerIntro.html">Schecker</a>
-    <a href="#">WishUp</a>
-    <a href="#">Bardot</a>
-    <a href="#">Standards&nbsp;Australia</a>
-    <a href="#">Credits</a>
+    <a href="./WishUp.html">WishUp</a>
+    <a href="./bardot.html">Bardot</a>
+    <a href="./sa.html">Standards&nbsp;Australia</a>
+    <a href="./credits.html">Credits</a>
   </div>
 </footer>
 
