--- a/scheckerIntro.html
+++ b/scheckerIntro.html
@@ -404,12 +404,12 @@
 <footer>
   <small class="copyright">	&#169; 2019 NHUT H. DON</small>
   <div class="footer-links">
-    <a href="#">Home</a>
-    <a href="#">MyPlasticFootprint</a>
-    <a href="#">WishUp</a>
-    <a href="#">Bardot</a>
-    <a href="#">Standards&nbsp;Australia</a>
-    <a href="#">Credits</a>
+    <a href="./index.html">Home</a>
+    <a href="./myPlasticFootprint.html">MyPlasticFootprint</a>
+    <a href="./WishUp.html">WishUp</a>
+    <a href="./bardot.html">Bardot</a>
+    <a href="./sa.html">Standards&nbsp;Australia</a>
+    <a href="./credits.html">Credits</a>
   </div>
 </footer>
 
