--- a/WishUp.html
+++ b/WishUp.html
@@ -80,7 +80,7 @@
 
 
 
-<section id="wishup-why">
+<section class="project-hero-img" id="wishup-why">
 
   <h2 class="block-in">Why?</h2>
     <p class="centered-text block-in">
@@ -113,10 +113,10 @@
   <div class="footer-links">
     <a href="./index.html">Home</a>
     <a href="./scheckerIntro.html">Schecker</a>
-    <a href="#">WishUp</a>
-    <a href="#">Bardot</a>
-    <a href="#">Standards&nbsp;Australia</a>
-    <a href="#">Credits</a>
+    <a href="./myPlasticFootprint.html">MyPlasticFootprint</a>
+    <a href="./bardot.html">Bardot</a>
+    <a href="./sa.html">Standards&nbsp;Australia</a>
+    <a href="credits.html">Credits</a>
   </div>
 </footer>
 
