--- a/myPlasticFootprint.html
+++ b/myPlasticFootprint.html
@@ -89,8 +89,7 @@
 
     <h5 class="block-in">USER PERSONAS</h5>
     <p class="centered-text block-in">
-      <strong>Main target: </strong>Young people below 40, frequent mobile phone users. <br />
-      <strong>Secondary target: </strong>People over 40.
+      <strong>Main target: </strong>Young people below 40, frequent mobile phone users.
     </p>
 
     <div class="wrapper not-fullscreen rachel">
@@ -211,7 +210,7 @@
 
 
 <section>
-  <h3>TO BE CONTINUED...</h3>
+  <h3>TO BE CONTINUED</h3>
 </section>
 
 
