hero img responsive fixed

--- a/WishUp.html
+++ b/WishUp.html
@@ -61,7 +61,8 @@
 
 <section class="project-intro">
 
-  <div class="project-hero-img" id="wishup-hero-img">
+  <div class="project-hero">
+    <div class="hero-img" id="wishup-hero-img"></div>
   </div>
 
   <div class="wrapper">
@@ -80,7 +81,7 @@
 
 
 
-<section class="project-hero-img" id="wishup-why">
+<section class="project-hero hero-img" id="wishup-why">
 
   <h2 class="block-in">Why?</h2>
     <p class="centered-text block-in">
