--- a/scheckerIntro.html
+++ b/scheckerIntro.html
@@ -62,7 +62,7 @@
 
 <section class="project-intro">
 
-  <div class="project-hero-img" id="schecker-hero">
+  <div class="project-hero" id="schecker-hero">
     <img alt="Hero Image" src="./Assets/schecker-cover.png" />
   </div>
 
