centered text fixed

--- a/WishUp.html
+++ b/WishUp.html
@@ -82,12 +82,17 @@
 
 
 <section class="project-hero hero-img" id="wishup-why">
-
   <h2 class="block-in">Why?</h2>
-    <p class="centered-text block-in">
-      <strong>I believe everyone (well, most of everyone) has at least a lifetime wish, yet not all was/is fortunate enough
-      to fulfil it while they still have the time and assets to. <br /><br /></strong>
-    </p>
+  <div class="wrapper">
+    <div class="block">
+      <p>
+        <strong>I believe everyone (well, most of everyone) has at least a lifetime wish, yet not all was/is fortunate enough
+        to fulfil it while they still have the time and assets to.</strong>
+      </p>
+    </div>
+  </div>
+
+
     <h5 class="block-in">REMEMBER THAT MOVIE UP?</h5>
 
 
