--- a/WishUp.html
+++ b/WishUp.html
@@ -82,7 +82,7 @@
 
 
 <section class="project-hero hero-img" id="wishup-why">
-  <h2 class="block-in">Why?</h2>
+  <h1 class="block-in">Why?</h1>
   <div class="wrapper">
     <div class="block">
       <p>
@@ -92,19 +92,11 @@
     </div>
   </div>
 
-
-    <h5 class="block-in">REMEMBER THAT MOVIE UP?</h5>
-
-
-
-
-
-
 </section>
 
 
 <section>
-  <h3>TO BE CONTINUED...</h3>
+  <h3>TO BE CONTINUED</h3>
 </section>
 
 
