--- a/myPlasticFootprint.html
+++ b/myPlasticFootprint.html
@@ -88,9 +88,6 @@
     <img alt="wireframe" class="light-bg-f9f9f9 not-fullscreen-img block-in" src="./Assets/mpf-wireframe.png" />
 
     <h5 class="block-in">USER PERSONAS</h5>
-    <p class="centered-text block-in">
-      <strong>Main target: </strong>Young people below 40, frequent mobile phone users.
-    </p>
 
     <div class="wrapper not-fullscreen rachel">
 
@@ -210,7 +207,7 @@
 
 
 <section>
-  <h3>TO BE CONTINUED</h3>
+  <h3>IN PROGRESS</h3>
 </section>
 
 
